syntax = "proto3";

package front.admin.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "api/front/admin/v1;v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "会员相关";
    version: "1.0";
  };
};

message MemberAddReq {
  int64       memberLevelId = 2;
  string      username = 3;
  string      password = 4;
  string      nickname = 5;
  string      phone = 6;
  int64       status = 7;
  string      createTime = 8;
  string      Icon = 9;
  int64       gender = 10;
  string      birthday = 11;
  string      city = 12;
  string      job = 13;
  string      personalizedSignature = 14;
  int64       sourceType = 15;
  int64       integration = 16;
  int64       growth = 17;
  int64       luckeyCount = 18;
  int64       historyIntegration = 19;
}

message MemberAddResp {
  string pong = 1;
}

message MemberListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberListData{
  int32       id = 1;
  int32       memberLevelId = 2;
  string      username = 3;
  string      password = 4;
  string      nickname = 5;
  string      phone = 6;
  int32       status = 7;
  string      createTime = 8;
  string      Icon = 9;
  int32       gender = 10;
  string      birthday = 11;
  string      city = 12;
  string      job = 13;
  string      personalizedSignature = 14;
  int32       sourceType = 15;
  int32       integration = 16;
  int32       growth = 17;
  int32       luckeyCount = 18;
  int32       historyIntegration = 19;
}

message MemberListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  MemberListData data = 6;
  bool success = 7;
}

message MemberUpdateReq {
  int64       id = 1;
  int64       memberLevelId = 2;
  string      username = 3;
  string      password = 4;
  string      nickname = 5;
  string      phone = 6;
  int64       status = 7;
  string      createTime = 8;
  string      Icon = 9;
  int64       gender = 10;
  string      birthday = 11;
  string      city = 12;
  string      job = 13;
  string      personalizedSignature = 14;
  int64       sourceType = 15;
  int64       integration = 16;
  int64       growth = 17;
  int64       luckeyCount = 18;
  int64       historyIntegration = 19;
}

message MemberUpdateResp {
  string pong = 1;
}

message MemberDeleteReq {
  int64 id = 1;
}

message MemberDeleteResp {
  string pong = 1;
}


message GrowthChangeHistoryAddReq {
  int64      memberId = 2;
  string      createTime = 3;
  int64      changeType = 4;
  int64      changeCount = 5;
  string      operateMan = 6;
  string      operateNote = 7;
  int64      sourceType = 8;
}

message GrowthChangeHistoryAddResp {
  string pong = 1;
}

message GrowthChangeHistoryListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message GrowthChangeHistoryListData{
  int32      Id = 1;
  int32      memberId = 2;
  string      createTime = 3;
  int32      changeType = 4;
  int32      changeCount = 5;
  string      operateMan = 6;
  string      operateNote = 7;
  int32      sourceType = 8;
}

message GrowthChangeHistoryListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  GrowthChangeHistoryListData data = 6;
  bool success = 7;
}

message GrowthChangeHistoryUpdateReq {
  int64      Id = 1;
  int64      memberId = 2;
  string      createTime = 3;
  int64      changeType = 4;
  int64      changeCount = 5;
  string      operateMan = 6;
  string      operateNote = 7;
  int64      sourceType = 8;
}

message GrowthChangeHistoryUpdateResp {
  string pong = 1;
}

message GrowthChangeHistoryDeleteReq {
  int64 id = 1;
}

message GrowthChangeHistoryDeleteResp {
  string pong = 1;
}

message IntegrationChangeHistoryAddReq {
  int64      memberId = 2;
  string  createTime = 3;
  int64      changeType = 4;
  int64      changeCount = 5;
  string      operateMan = 6;
  string      operateNote = 7;
  int64      sourceType = 8;
}

message IntegrationChangeHistoryAddResp {
  string pong = 1;
}

message IntegrationChangeHistoryListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message IntegrationChangeHistoryListData{
  int32      Id = 1;
  int32      memberId = 2;
  string  createTime = 3;
  int32      changeType = 4;
  int32      changeCount = 5;
  string      operateMan = 6;
  string      operateNote = 7;
  int32      sourceType = 8;
}

message IntegrationChangeHistoryListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  IntegrationChangeHistoryListData data = 6;
  bool success = 7;
}

message IntegrationChangeHistoryUpdateReq {
  int64      Id = 1;
  int64      memberId = 2;
  string  createTime = 3;
  int64      changeType = 4;
  int64      changeCount = 5;
  string      operateMan = 6;
  string      operateNote = 7;
  int64      sourceType = 8;
}

message IntegrationChangeHistoryUpdateResp {
  string pong = 1;
}

message IntegrationChangeHistoryDeleteReq {
  int64 id = 1;
}

message IntegrationChangeHistoryDeleteResp {
  string pong = 1;
}

message IntegrationConsumeSettingAddReq {
  int64  deductionPerAmount = 2;
  int64  maxPercentPerOrder = 3;
  int64  useUnit = 4;
  int64  couponStatus = 5;
}

message IntegrationConsumeSettingAddResp {
  string pong = 1;
}

message IntegrationConsumeSettingListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message IntegrationConsumeSettingListData{
  int32  id = 1;
  int32  deductionPerAmount = 2;
  int32  maxPercentPerOrder = 3;
  int32  useUnit = 4;
  int32  couponStatus = 5;
}

message IntegrationConsumeSettingListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  IntegrationConsumeSettingListData data = 6;
  bool success = 7;
}

message IntegrationConsumeSettingUpdateReq {
  int64  id = 1;
  int64  deductionPerAmount = 2;
  int64  maxPercentPerOrder = 3;
  int64  useUnit = 4;
  int64  couponStatus = 5;
}

message IntegrationConsumeSettingUpdateResp {
  string pong = 1;
}

message IntegrationConsumeSettingDeleteReq {
  int64 id = 1;
}

message IntegrationConsumeSettingDeleteResp {
  string pong = 1;
}

message MemberLevelAddReq {
  string    name = 2;
  int64    GrowthPoint = 3;
  int64    defaultStatus = 4;
  int64  freeFreightPoint = 5;
  int64    commentGrowthPoint = 6;
  int64    priviledgeFreeFreight = 7;
  int64    priviledgeSignIn = 8;
  int64    priviledgeComment = 9;
  int64    priviledgePromotion = 10;
  int64    priviledgeMemberPrice = 11;
  int64    priviledgeBirthday = 12;
  string    note = 13;
}

message MemberLevelAddResp {
  string pong = 1;
}

message MemberLevelListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberLevelListData{
  int32    id = 1;
  string    name = 2;
  int32    GrowthPoint = 3;
  int32    defaultStatus = 4;
  int32  freeFreightPoint = 5;
  int32    commentGrowthPoint = 6;
  int32    priviledgeFreeFreight = 7;
  int32    priviledgeSignIn = 8;
  int32    priviledgeComment = 9;
  int32    priviledgePromotion = 10;
  int32    priviledgeMemberPrice = 11;
  int32    priviledgeBirthday = 12;
  string    note = 13;
}

message MemberLevelListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  MemberLevelListData data = 6;
  bool success = 7;
}

message MemberLevelUpdateReq {
  int64    id = 1;
  string    name = 2;
  int64    growthPoint = 3;
  int64    defaultStatus = 4;
  int64  freeFreightPoint = 5;
  int64    commentGrowthPoint = 6;
  int64    priviledgeFreeFreight = 7;
  int64    priviledgeSignIn = 8;
  int64    priviledgeComment = 9;
  int64    priviledgePromotion = 10;
  int64    priviledgeMemberPrice = 11;
  int64    priviledgeBirthday = 12;
  string    note = 13;
}

message MemberLevelUpdateResp {
  string pong = 1;
}

message MemberLevelDeleteReq {
  int64 id = 1;
}

message MemberLevelDeleteResp {
  string pong = 1;
}

message MemberLoginLogAddReq {
  int64      memberId = 2;
  string  createTime = 3;
  string      Ip = 4;
  string      city = 5;
  int64      LoginType = 6;
  string      province = 7;
}

message MemberLoginLogAddResp {
  string pong = 1;
}

message MemberLoginLogListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberLoginLogListData{
  int32      id = 1;
  int32      memberId = 2;
  string  createTime = 3;
  string      Ip = 4;
  string      city = 5;
  int32      LoginType = 6;
  string      province = 7;
}

message MemberLoginLogListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  MemberLoginLogListData data = 6;
  bool success = 7;
}

message MemberLoginLogUpdateReq {
  int64      id = 1;
  int64      memberId = 2;
  string  createTime = 3;
  string      Ip = 4;
  string      city = 5;
  int64      loginType = 6;
  string      province = 7;
}

message MemberLoginLogUpdateResp {
  string pong = 1;
}

message MemberLoginLogDeleteReq {
  int64 id = 1;
}

message MemberLoginLogDeleteResp {
  string pong = 1;
}

message MemberMemberTagRelationAddReq {
  int64  memberId = 2;
  int64  tagId = 3;
}

message MemberMemberTagRelationAddResp {
  string pong = 1;
}

message MemberMemberTagRelationListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberMemberTagRelationListData{
  int32  id = 1;
  int32  memberId = 2;
  int32  tagId = 3;
}

message MemberMemberTagRelationListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  MemberMemberTagRelationListData data = 6;
  bool success = 7;
}

message MemberMemberTagRelationUpdateReq {
  int64  id = 1;
  int64  memberId = 2;
  int64  tagId = 3;
}

message MemberMemberTagRelationUpdateResp {
  string pong = 1;
}

message MemberMemberTagRelationDeleteReq {
  int64 id = 1;
}

message MemberMemberTagRelationDeleteResp {
  string pong = 1;
}

message MemberProductCategoryRelationAddReq {
  int64  memberId = 2;
  int64  productCategoryId = 3;
}

message MemberProductCategoryRelationAddResp {
  string pong = 1;
}

message MemberProductCategoryRelationListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberProductCategoryRelationListData{
  int32  id = 1;
  int32  memberId = 2;
  int32  productCategoryId = 3;
}

message MemberProductCategoryRelationListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  MemberProductCategoryRelationListData data = 6;
  bool success = 7;
}

message MemberProductCategoryRelationUpdateReq {
  int64  id = 1;
  int64  memberId = 2;
  int64  productCategoryId = 3;
}

message MemberProductCategoryRelationUpdateResp {
  string pong = 1;
}

message MemberProductCategoryRelationDeleteReq {
  int64 id = 1;
}

message MemberProductCategoryRelationDeleteResp {
  string pong = 1;
}


message MemberReceiveAddressAddReq {
  int64    memberId = 2;
  string  name = 3;
  string  phoneNumber = 4;
  int64    defaultStatus = 5;
  string  postCode = 6;
  string  province = 7;
  string  city = 8;
  string  region = 9;
  string  detailAddress = 10;
}

message MemberReceiveAddressAddResp {
  string pong = 1;
}

message MemberReceiveAddressListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberReceiveAddressListData{
  int32    id = 1;
  int32    memberId = 2;
  string  name = 3;
  string  phoneNumber = 4;
  int32    defaultStatus = 5;
  string  postCode = 6;
  string  province = 7;
  string  city = 8;
  string  region = 9;
  string  detailAddress = 10;
}

message MemberReceiveAddressListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  MemberReceiveAddressListData data = 6;
  bool success = 7;
}

message MemberReceiveAddressUpdateReq {
  int64    id = 1;
  int64    memberId = 2;
  string  name = 3;
  string  phoneNumber = 4;
  int64    defaultStatus = 5;
  string  postCode = 6;
  string  province = 7;
  string  city = 8;
  string  region = 9;
  string  detailAddress = 10;
}

message MemberReceiveAddressUpdateResp {
  string pong = 1;
}

message MemberReceiveAddressDeleteReq {
  int64 id = 1;
}

message MemberReceiveAddressDeleteResp {
  string pong = 1;
}


message MemberRuleSettingAddReq {
  int64    continueSignDay = 2;
  int64    continueSignPoint = 3;
  int64  consumePerPoint = 4;
  int64  lowOrderAmount = 5;
  int64    maxPointPerOrder = 6;
  int64    type = 7;
}

message MemberRuleSettingAddResp {
  string pong = 1;
}

message MemberRuleSettingListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberRuleSettingListData{
  int32    id = 1;
  int32    continueSignDay = 2;
  int32    continueSignPoint = 3;
  int32  consumePerPoint = 4;
  int32  lowOrderAmount = 5;
  int32    maxPointPerOrder = 6;
  int32    type = 7;
}

message MemberRuleSettingListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  MemberRuleSettingListData data = 6;
  bool success = 7;
}

message MemberRuleSettingUpdateReq {
  int64    id = 1;
  int64    continueSignDay = 2;
  int64    continueSignPoint = 3;
  int64  consumePerPoint = 4;
  int64  lowOrderAmount = 5;
  int64    maxPointPerOrder = 6;
  int64    type = 7;
}

message MemberRuleSettingUpdateResp {
  string pong = 1;
}

message MemberRuleSettingDeleteReq {
  int64 id = 1;
}

message MemberRuleSettingDeleteResp {
  string pong = 1;
}

message MemberStatisticsInfoAddReq {
  int64      memberId = 2;
  int64    consumeAmount = 3;
  int64      orderCount = 4;
  int64      couponCount = 5;
  int64      commentCount = 6;
  int64      returnOrderCount = 7;
  int64      loginCount = 8;
  int64      attendCount = 9;
  int64      fansCount = 10;
  int64      collectProductCount = 11;
  int64      collectSubjectCount = 12;
  int64      collectTopicCount = 13;
  int64      collectCommentCount = 14;
  int64      InviteFriendCount = 15;
  string  recentOrderTime = 16;
}

message MemberStatisticsInfoAddResp {
  string pong = 1;
}

message MemberStatisticsInfoListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberStatisticsInfoListData{
  int32      id = 1;
  int32      memberId = 2;
  int32    consumeAmount = 3;
  int32      orderCount = 4;
  int32      couponCount = 5;
  int32      commentCount = 6;
  int32      returnOrderCount = 7;
  int32      loginCount = 8;
  int32      attendCount = 9;
  int32      fansCount = 10;
  int32      collectProductCount = 11;
  int32      collectSubjectCount = 12;
  int32      collectTopicCount = 13;
  int32      collectCommentCount = 14;
  int32      inviteFriendCount = 15;
  string  recentOrderTime = 16;
}

message MemberStatisticsInfoListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  MemberStatisticsInfoListData data = 6;
  bool success = 7;
}

message MemberStatisticsInfoUpdateReq {
  int64      id = 1;
  int64      memberId = 2;
  int64    consumeAmount = 3;
  int64      orderCount = 4;
  int64      couponCount = 5;
  int64      commentCount = 6;
  int64      returnOrderCount = 7;
  int64      loginCount = 8;
  int64      attendCount = 9;
  int64      fansCount = 10;
  int64      collectProductCount = 11;
  int64      collectSubjectCount = 12;
  int64      collectTopicCount = 13;
  int64      collectCommentCount = 14;
  int64      inviteFriendCount = 15;
  string  recentOrderTime = 16;
}

message MemberStatisticsInfoUpdateResp {
  string pong = 1;
}

message MemberStatisticsInfoDeleteReq {
  int64 id = 1;
}

message MemberStatisticsInfoDeleteResp {
  string pong = 1;
}


message MemberTagAddReq {
  string    name = 2;
  int64    finishOrderCount = 3;
  int64  finishOrderAmount = 4;
}

message MemberTagAddResp {
  string pong = 1;
}

message MemberTagListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberTagListData{
  int32    id = 1;
  string    name = 2;
  int32    finishOrderCount = 3;
  int32  finishOrderAmount = 4;
}

message MemberTagListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  MemberTagListData data = 6;
  bool success = 7;
}

message MemberTagUpdateReq {
  int64    id = 1;
  string    name = 2;
  int64    finishOrderCount = 3;
  int64  finishOrderAmount = 4;
}

message MemberTagUpdateResp {
  string pong = 1;
}

message MemberTagDeleteReq {
  int64 id = 1;
}

message MemberTagDeleteResp {
  string pong = 1;
}


message MemberTaskAddReq {
  string  name = 2;
  int64    growth = 3;
  int64    intergration = 4;
  int64    type = 5;
}

message MemberTaskAddResp {
  string pong = 1;
}

message MemberTaskListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberTaskListData{
  int32    id = 1;
  string  name = 2;
  int64    Growth = 3;
  int32    Intergration = 4;
  int32    type = 5;
}

message MemberTaskListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  MemberTaskListData data = 6;
  bool success = 7;
}

message MemberTaskUpdateReq {
  int64    id = 1;
  string  name = 2;
  int64    Growth = 3;
  int64    Intergration = 4;
  int64    type = 5;
}

message MemberTaskUpdateResp {
  string pong = 1;
}

message MemberTaskDeleteReq {
  int64 id = 1;
}

message MemberTaskDeleteResp {
  string pong = 1;
}

service Ums {

  rpc MemberAdd(MemberAddReq) returns(MemberAddResp){
    option (google.api.http) = {
      post: "/api/member/member/add"
      body: "*"
    };
  }
  rpc MemberList(MemberListReq) returns(MemberListResp){
    option (google.api.http) = {
      post: "/api/member/member/list"
      body: "*"
    };
  }
  rpc MemberUpdate(MemberUpdateReq) returns(MemberUpdateResp){
    option (google.api.http) = {
      post: "/api/member/member/update"
      body: "*"
    };
  }
  rpc MemberDelete(MemberDeleteReq) returns(MemberDeleteResp){
    option (google.api.http) = {
      post: "/api/member/member/delete"
      body: "*"
    };
  }


  rpc GrowthChangeHistoryAdd(GrowthChangeHistoryAddReq) returns(GrowthChangeHistoryAddResp){
    option (google.api.http) = {
      post: "/api/member/growthchangehistory/add"
      body: "*"
    };
  }
  rpc GrowthChangeHistoryList(GrowthChangeHistoryListReq) returns(GrowthChangeHistoryListResp){
    option (google.api.http) = {
      post: "/api/member/growthchangehistory/list"
      body: "*"
    };
  }
  rpc GrowthChangeHistoryUpdate(GrowthChangeHistoryUpdateReq) returns(GrowthChangeHistoryUpdateResp){
    option (google.api.http) = {
      post: "/api/member/growthchangehistory/update"
      body: "*"
    };
  }
  rpc GrowthChangeHistoryDelete(GrowthChangeHistoryDeleteReq) returns(GrowthChangeHistoryDeleteResp){
    option (google.api.http) = {
      post: "/api/member/growthchangehistory/delete"
      body: "*"
    };
  }

  rpc IntegrationChangeHistoryAdd(IntegrationChangeHistoryAddReq) returns(IntegrationChangeHistoryAddResp){
    option (google.api.http) = {
      post: "/api/member/integrationchangehistory/add"
      body: "*"
    };
  }
  rpc IntegrationChangeHistoryList(IntegrationChangeHistoryListReq) returns(IntegrationChangeHistoryListResp){
    option (google.api.http) = {
      post: "/api/member/integrationchangehistory/list"
      body: "*"
    };
  }
  rpc IntegrationChangeHistoryUpdate(IntegrationChangeHistoryUpdateReq) returns(IntegrationChangeHistoryUpdateResp){
    option (google.api.http) = {
      post: "/api/member/integrationchangehistory/update"
      body: "*"
    };
  }
  rpc IntegrationChangeHistoryDelete(IntegrationChangeHistoryDeleteReq) returns(IntegrationChangeHistoryDeleteResp){
    option (google.api.http) = {
      post: "/api/member/integrationchangehistory/delete"
      body: "*"
    };
  }

  rpc IntegrationConsumeSettingAdd(IntegrationConsumeSettingAddReq) returns(IntegrationConsumeSettingAddResp){
    option (google.api.http) = {
      post: "/api/member/integrationconsumesetting/add"
      body: "*"
    };
  }
  rpc IntegrationConsumeSettingList(IntegrationConsumeSettingListReq) returns(IntegrationConsumeSettingListResp){
    option (google.api.http) = {
      post: "/api/member/integrationconsumesetting/list"
      body: "*"
    };
  }
  rpc IntegrationConsumeSettingUpdate(IntegrationConsumeSettingUpdateReq) returns(IntegrationConsumeSettingUpdateResp){
    option (google.api.http) = {
      post: "/api/member/integrationconsumesetting/update"
      body: "*"
    };
  }
  rpc IntegrationConsumeSettingDelete(IntegrationConsumeSettingDeleteReq) returns(IntegrationConsumeSettingDeleteResp){
    option (google.api.http) = {
      post: "/api/member/integrationconsumesetting/delete"
      body: "*"
    };
  }

  rpc MemberLevelAdd(MemberLevelAddReq) returns(MemberLevelAddResp){
    option (google.api.http) = {
      post: "/api/member/level/add"
      body: "*"
    };
  }
  rpc MemberLevelList(MemberLevelListReq) returns(MemberLevelListResp){
    option (google.api.http) = {
      post: "/api/member/level/list"
      body: "*"
    };
  }
  rpc MemberLevelUpdate(MemberLevelUpdateReq) returns(MemberLevelUpdateResp){
    option (google.api.http) = {
      post: "/api/member/level/update"
      body: "*"
    };
  }
  rpc MemberLevelDelete(MemberLevelDeleteReq) returns(MemberLevelDeleteResp){
    option (google.api.http) = {
      post: "/api/member/level/delete"
      body: "*"
    };
  }

  rpc MemberLoginLogAdd(MemberLoginLogAddReq) returns(MemberLoginLogAddResp){
    option (google.api.http) = {
      post: "/api/member/loginlog/add"
      body: "*"
    };
  }
  rpc MemberLoginLogList(MemberLoginLogListReq) returns(MemberLoginLogListResp){
    option (google.api.http) = {
      post: "/api/member/loginlog/list"
      body: "*"
    };
  }
  rpc MemberLoginLogUpdate(MemberLoginLogUpdateReq) returns(MemberLoginLogUpdateResp){
    option (google.api.http) = {
      post: "/api/member/loginlog/update"
      body: "*"
    };
  }
  rpc MemberLoginLogDelete(MemberLoginLogDeleteReq) returns(MemberLoginLogDeleteResp){
    option (google.api.http) = {
      post: "/api/member/loginlog/delete"
      body: "*"
    };
  }


  rpc MemberReceiveAddressAdd(MemberReceiveAddressAddReq) returns(MemberReceiveAddressAddResp){
    option (google.api.http) = {
      post: "/api/member/address/add"
      body: "*"
    };
  }
  rpc MemberReceiveAddressList(MemberReceiveAddressListReq) returns(MemberReceiveAddressListResp){
    option (google.api.http) = {
      post: "/api/member/address/list"
      body: "*"
    };
  }
  rpc MemberReceiveAddressUpdate(MemberReceiveAddressUpdateReq) returns(MemberReceiveAddressUpdateResp){
    option (google.api.http) = {
      post: "/api/member/address/update"
      body: "*"
    };
  }
  rpc MemberReceiveAddressDelete(MemberReceiveAddressDeleteReq) returns(MemberReceiveAddressDeleteResp){
    option (google.api.http) = {
      post: "/api/member/address/delete"
      body: "*"
    };
  }

  rpc MemberRuleSettingAdd(MemberRuleSettingAddReq) returns(MemberRuleSettingAddResp){
    option (google.api.http) = {
      post: "/api/member/rulesetting/add"
      body: "*"
    };
  }
  rpc MemberRuleSettingList(MemberRuleSettingListReq) returns(MemberRuleSettingListResp){
    option (google.api.http) = {
      post: "/api/member/rulesetting/list"
      body: "*"
    };
  }
  rpc MemberRuleSettingUpdate(MemberRuleSettingUpdateReq) returns(MemberRuleSettingUpdateResp){
    option (google.api.http) = {
      post: "/api/member/rulesetting/update"
      body: "*"
    };
  }
  rpc MemberRuleSettingDelete(MemberRuleSettingDeleteReq) returns(MemberRuleSettingDeleteResp){
    option (google.api.http) = {
      post: "/api/member/rulesetting/delete"
      body: "*"
    };
  }

  rpc MemberStatisticsInfoAdd(MemberStatisticsInfoAddReq) returns(MemberStatisticsInfoAddResp){
    option (google.api.http) = {
      post: "/api/member/statistics/add"
      body: "*"
    };
  }
  rpc MemberStatisticsInfoList(MemberStatisticsInfoListReq) returns(MemberStatisticsInfoListResp){
    option (google.api.http) = {
      post: "/api/member/statistics/list"
      body: "*"
    };
  }
  rpc MemberStatisticsInfoUpdate(MemberStatisticsInfoUpdateReq) returns(MemberStatisticsInfoUpdateResp){
    option (google.api.http) = {
      post: "/api/member/statistics/update"
      body: "*"
    };
  }
  rpc MemberStatisticsInfoDelete(MemberStatisticsInfoDeleteReq) returns(MemberStatisticsInfoDeleteResp){
    option (google.api.http) = {
      post: "/api/member/statistics/delete"
      body: "*"
    };
  }

  rpc MemberTagAdd(MemberTagAddReq) returns(MemberTagAddResp){
    option (google.api.http) = {
      post: "/api/member/tag/add"
      body: "*"
    };
  }
  rpc MemberTagList(MemberTagListReq) returns(MemberTagListResp){
    option (google.api.http) = {
      post: "/api/member/tag/list"
      body: "*"
    };
  }
  rpc MemberTagUpdate(MemberTagUpdateReq) returns(MemberTagUpdateResp){
    option (google.api.http) = {
      post: "/api/member/tag/update"
      body: "*"
    };
  }
  rpc MemberTagDelete(MemberTagDeleteReq) returns(MemberTagDeleteResp){
    option (google.api.http) = {
      post: "/api/member/tag/delete"
      body: "*"
    };
  }

  rpc MemberTaskAdd(MemberTaskAddReq) returns(MemberTaskAddResp){
    option (google.api.http) = {
      post: "/api/member/task/add"
      body: "*"
    };
  }
  rpc MemberTaskList(MemberTaskListReq) returns(MemberTaskListResp){
    option (google.api.http) = {
      post: "/api/member/task/list"
      body: "*"
    };
  }
  rpc MemberTaskUpdate(MemberTaskUpdateReq) returns(MemberTaskUpdateResp){
    option (google.api.http) = {
      post: "/api/member/task/update"
      body: "*"
    };
  }
  rpc MemberTaskDelete(MemberTaskDeleteReq) returns(MemberTaskDeleteResp){
    option (google.api.http) = {
      post: "/api/member/task/delete"
      body: "*"
    };
  }
}